--- a/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be4b0eec",
+   "id": "45e044ff",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f940dc",
+   "id": "28569d79",
    "metadata": {},
    "source": [
     "# Diseño del sistema de control del pédulo invertido"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e744dbd1",
+   "id": "f1b4f4ab",
    "metadata": {
     "colab_type": "text",
     "id": "zLhphrmYQfRZ"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "156594ce",
+   "id": "2473d6c9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a60813",
+   "id": "2f6ca50e",
    "metadata": {
     "colab_type": "text",
     "id": "X5tpCzCqQxbc"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4acf00bf",
+   "id": "5438722d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eaaf010",
+   "id": "aab19cb6",
    "metadata": {
     "colab_type": "text",
     "id": "j8aD5bcEQ6Mp"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "006acb7c",
+   "id": "690a4556",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f40edf4",
+   "id": "8171950a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7bfad861",
+   "id": "bbb476b4",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "72dd70da",
+   "id": "1d119137",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "896065ec",
+   "id": "99219871",
    "metadata": {
     "colab_type": "text",
     "id": "0ILtOeUgRDu6"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "64628654",
+   "id": "ad30aaf9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc6359d7",
+   "id": "138b3fbf",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5114d69f",
+   "id": "fbf1d8fe",
    "metadata": {
     "colab_type": "text",
     "id": "GVl0c3o-SQdr"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8a31883",
+   "id": "5badf4c8",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a58ef6",
+   "id": "c16b3128",
    "metadata": {
     "colab_type": "text",
     "id": "YXLS-XtZR0Wz"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6254229e",
+   "id": "ab8b6a3b",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -517,8 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.00000055+0.00000000e+00j, -7.99999945+0.00000000e+00j,\n",
-       "       -4.        +2.82767841e-07j, -4.        -2.82767841e-07j])"
+       "array([-8.00000064, -7.99999936, -4.00000054, -3.99999946])"
       ]
      },
      "execution_count": 11,
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e27a55",
+   "id": "e78ce1bb",
    "metadata": {
     "colab_type": "text",
     "id": "SYwU4LmaScIE"
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc2e92e",
+   "id": "81db0352",
    "metadata": {
     "colab_type": "text",
     "id": "dePTqAuIjvWM"
@@ -556,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5eddfdb3",
+   "id": "b7f94b75",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7e93b0c1",
+   "id": "8bfd16f9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -641,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "49104d59",
+   "id": "e70b037c",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -666,8 +665,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.+6.10065350e-07j, -8.-6.10065350e-07j, -4.+2.21980242e-07j,\n",
-       "       -4.-2.21980242e-07j])"
+       "array([-8.        +2.97116012e-07j, -8.        -2.97116012e-07j,\n",
+       "       -4.00000034+0.00000000e+00j, -3.99999966+0.00000000e+00j])"
       ]
      },
      "execution_count": 14,
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7db8d75",
+   "id": "5d7deb30",
    "metadata": {
     "colab_type": "text",
     "id": "TvMLcJ3H2Y8H"
@@ -693,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "589efb8f",
+   "id": "7de62b91",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -718,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9c89dfe",
+   "id": "f28d3d81",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -748,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7c015545",
+   "id": "0c4399f0",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -797,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5ed9464c",
+   "id": "88863612",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -822,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9af145fd",
+   "id": "2f5b12de",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -872,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2131efca",
+   "id": "c79d0a33",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -913,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c59937ef",
+   "id": "1f0466b9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -955,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6f9a3fbf",
+   "id": "2b861699",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -996,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ee7de5af",
+   "id": "dac14dd3",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1022,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "25043a11",
+   "id": "523ee4b4",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1063,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "039223ed",
+   "id": "139b0944",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1103,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6c3eeb5f",
+   "id": "e9fa0354",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1164,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd15d554",
+   "id": "408b56c3",
    "metadata": {
     "colab": {},
     "colab_type": "code",
