--- a/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "11c562f5",
+   "id": "0a31ab4a",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d940db1",
+   "id": "59852f1d",
    "metadata": {},
    "source": [
     "# Diseño del sistema de control del pédulo invertido"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd1f0cb3",
+   "id": "af8b77d8",
    "metadata": {
     "colab_type": "text",
     "id": "zLhphrmYQfRZ"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5dfb439e",
+   "id": "d8d0f9ee",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb17269",
+   "id": "1abe2a56",
    "metadata": {
     "colab_type": "text",
     "id": "X5tpCzCqQxbc"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "703fd091",
+   "id": "86184eac",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed224608",
+   "id": "5902dd42",
    "metadata": {
     "colab_type": "text",
     "id": "j8aD5bcEQ6Mp"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "36761c75",
+   "id": "63b8e036",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5650e504",
+   "id": "d4d257b6",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0bced7cd",
+   "id": "3b4ed5ba",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3ad6ce50",
+   "id": "403e00b9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3021d92d",
+   "id": "85e972a9",
    "metadata": {
     "colab_type": "text",
     "id": "0ILtOeUgRDu6"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8549af13",
+   "id": "35a34d7d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "300bb97d",
+   "id": "2e30545a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "751d4572",
+   "id": "c3b1b760",
    "metadata": {
     "colab_type": "text",
     "id": "GVl0c3o-SQdr"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6c6e8c38",
+   "id": "6c326487",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9faf06b1",
+   "id": "df45dce5",
    "metadata": {
     "colab_type": "text",
     "id": "YXLS-XtZR0Wz"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b7480485",
+   "id": "5df3cf67",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -517,7 +517,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.00000064, -7.99999936, -4.00000054, -3.99999946])"
+       "array([-8.00000055+0.00000000e+00j, -7.99999945+0.00000000e+00j,\n",
+       "       -4.        +2.82767841e-07j, -4.        -2.82767841e-07j])"
       ]
      },
      "execution_count": 11,
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e92e58",
+   "id": "42da471b",
    "metadata": {
     "colab_type": "text",
     "id": "SYwU4LmaScIE"
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb3e290",
+   "id": "015a4c00",
    "metadata": {
     "colab_type": "text",
     "id": "dePTqAuIjvWM"
@@ -555,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "089365ed",
+   "id": "6673f182",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -581,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9a1f2c16",
+   "id": "941cf5a5",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "46c8964b",
+   "id": "b0107c71",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -665,8 +666,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.        +2.97116012e-07j, -8.        -2.97116012e-07j,\n",
-       "       -4.00000034+0.00000000e+00j, -3.99999966+0.00000000e+00j])"
+       "array([-8.+6.10065350e-07j, -8.-6.10065350e-07j, -4.+2.21980242e-07j,\n",
+       "       -4.-2.21980242e-07j])"
       ]
      },
      "execution_count": 14,
@@ -680,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e27ffc0",
+   "id": "8560f729",
    "metadata": {
     "colab_type": "text",
     "id": "TvMLcJ3H2Y8H"
@@ -692,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a2414c14",
+   "id": "7433ae18",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -717,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "14d5c40d",
+   "id": "fe38fe9e",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -747,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e011f0cb",
+   "id": "a710c802",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -796,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dcabf96d",
+   "id": "d63d2b22",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -821,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a7659f3c",
+   "id": "636414fb",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -871,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e1277917",
+   "id": "224ce53e",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -912,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "59ee0e6f",
+   "id": "b62b0d41",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -954,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e2dafccf",
+   "id": "1ad41d84",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -995,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "12aa8123",
+   "id": "4255e5a8",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1021,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "85bb7e5b",
+   "id": "080111ae",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1062,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2a63c5dd",
+   "id": "c068d074",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1102,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e8bb57d2",
+   "id": "00dfe874",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1163,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4612476d",
+   "id": "d14c0020",
    "metadata": {
     "colab": {},
     "colab_type": "code",
