--- a/_sources/sources/notebooks_sources/modulo_ve/formas_canonicas.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/formas_canonicas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8d487f1",
+   "id": "f48cc3c1",
    "metadata": {},
    "source": [
     "# Formas canónicas de un espacio de estados\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2e2085",
+   "id": "ee858ccd",
    "metadata": {},
    "source": [
     "$$  \n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787d712d",
+   "id": "d024adf0",
    "metadata": {},
    "source": [
     "donde  $u$ es la entrada, $y$ es la salida y $y^{(n)}$ representa la $n-th$ derivada de $y$ con respecto al tiempo. Haciendo la transformada de Laplace se tiene:"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e40e81f",
+   "id": "c6d9ad77",
    "metadata": {},
    "source": [
     "$$  \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ca2d1d",
+   "id": "5d14b35b",
    "metadata": {},
    "source": [
     "y se logar la siguiente función transferencia:"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85d25590",
+   "id": "4ea1918a",
    "metadata": {},
    "source": [
     "$$  \n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278c76d1",
+   "id": "dedac053",
    "metadata": {},
    "source": [
     "## Forma canónica de controlabilidad\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd19075",
+   "id": "9d021e63",
    "metadata": {},
    "source": [
     "$$\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4244a993",
+   "id": "aaeaf754",
    "metadata": {},
    "source": [
     "### Ejemplo 1 \n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05330160",
+   "id": "7c01883c",
    "metadata": {},
    "source": [
     "$$  \n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8835b7",
+   "id": "bd485c07",
    "metadata": {},
    "source": [
     "Obtener la representación de estados en la forma **canónica de controlabilidad**.\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9bc4777",
+   "id": "a15e0909",
    "metadata": {},
    "source": [
     "$$\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe78b79",
+   "id": "dd126fdb",
    "metadata": {},
    "source": [
     "## Forma Canónica de Observabilidad"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18bcdb46",
+   "id": "9bcd806c",
    "metadata": {},
    "source": [
     "Suponiendo que $A_c, B_c, C_c, D_c$ son las matrices de un sistema en su forma canónica de controlabilidad, el sistema en su forma **canónica de observable** tendrá la siguiente forma:\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3f82897",
+   "id": "f6c46ead",
    "metadata": {},
    "source": [
     "### Ejemplo 2:\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5c5282d",
+   "id": "55f605ec",
    "metadata": {},
    "source": [
     "$$\n",
@@ -212,11 +212,11 @@
     "extension": ".md",
     "format_name": "myst",
     "format_version": 0.13,
-    "jupytext_version": "1.10.2"
+    "jupytext_version": "1.10.3"
    }
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,14 +241,14 @@
    41,
    47,
    53,
-   74,
-   80,
-   86,
-   92,
-   115,
-   119,
-   125,
-   131
+   73,
+   79,
+   85,
+   91,
+   114,
+   118,
+   124,
+   130
   ]
  },
  "nbformat": 4,
