--- a/_sources/sources/notebooks_sources/modulo_ve/transformacion_formas_canonicas.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/transformacion_formas_canonicas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be1c86e0",
+   "id": "62c101f4",
    "metadata": {
     "colab_type": "text",
     "id": "V-kf_C3Hhklj"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39df7e80",
+   "id": "b2ccc47f",
    "metadata": {},
    "source": [
     "# Transformación a la forma canónica de controlabilidad\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6dc905",
+   "id": "ba0cdc02",
    "metadata": {},
    "source": [
     "Como vimos anteriormente, una transformación lineal mediante la matriz $\\mathbf T$, que hace:\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b227ed",
+   "id": "3c648ddb",
    "metadata": {},
    "source": [
     "Trabajando con las columnas 2 y 3 se tiene que:\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931df12b",
+   "id": "3fda5a8a",
    "metadata": {},
    "source": [
     "Por otro lado, asumiendo que $\\mathbf B_c$ está en la forma canónica de control, tenemos la relación\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5992964",
+   "id": "14e9b908",
    "metadata": {},
    "source": [
     "## Definición:\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e84cdae",
+   "id": "c22fb9dd",
    "metadata": {},
    "source": [
     "Como vimos anteriormente, una transformación lineal mediante la matriz $\\mathbf{T}$, que hace:\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a3bde9",
+   "id": "416a5ddb",
    "metadata": {},
    "source": [
     "Esto transforma a mi sistema en:\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bdf0f95",
+   "id": "7045b639",
    "metadata": {},
    "source": [
     "Como queremos obtener el forma canónica de observabilidad llamamos $\\mathbf{\\bar A} = \\mathbf{A_o}$, $\\mathbf{\\bar B} =  \\mathbf{B_o}$, $\\mathbf{\\bar C} = \\mathbf{C_o}$ y a $\\bar D = D_o$. \n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1eef88",
+   "id": "e66746b5",
    "metadata": {},
    "source": [
     "De esta manera tenemos que:\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b097c9",
+   "id": "556f089c",
    "metadata": {},
    "source": [
     "De esta manera podemos obtener las siguientes igualdades:\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d99bfe7",
+   "id": "a83fd75d",
    "metadata": {},
    "source": [
     "Usando la ecuación de la transformación de la matriz $\\mathbf{C_o=CT}$, se tiene que:\n",
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94cb89df",
+   "id": "d504e8f9",
    "metadata": {},
    "source": [
     "Esto lo podemos reordenar como un sistema de ecuaciones en forma matricial de la siguiente manera:\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434363b5",
+   "id": "dfbc3726",
    "metadata": {},
    "source": [
     "Llamando a la matriz de observabilidad \n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee0a353",
+   "id": "2a740498",
    "metadata": {},
    "source": [
     "En general para un sistema de orden $n$, la matriz $\\mathcal{O}$ resulta\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d879a2",
+   "id": "2a853148",
    "metadata": {},
    "source": [
     "## Ejemplo masa resorte: obtener la forma canónica de observabilidad y con matriz de transformación T"
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "86cff772",
+   "id": "1b3de12b",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3509bd3c",
+   "id": "74aac0d1",
    "metadata": {},
    "source": [
     "Definimos los parámetros del sistema"
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01873f6a",
+   "id": "d51072fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d51153",
+   "id": "b16b8154",
    "metadata": {},
    "source": [
     "Definimos las matrices del sistema a partir de las ecuaciones diferenciales:"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b405166",
+   "id": "dd939d60",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9692a30e",
+   "id": "651b91ac",
    "metadata": {},
    "source": [
     "Para obtener la forma canónica de observabilidad debemos obtener la matriz $\\mathcal{O}$. Como el sistema es de orden 2 es:\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bf4eea",
+   "id": "01869d02",
    "metadata": {},
    "source": [
     "Apilamos verticalmente $\\mathbf C$ y $\\mathbf{CA}$"
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bc6f0819",
+   "id": "e91758f9",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452f4d55",
+   "id": "f81749f1",
    "metadata": {},
    "source": [
     "Ahora calculamos la última columna de $\\mathbf T$."
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5f4b622",
+   "id": "9e97d332",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8967e4e",
+   "id": "aa4c8a3d",
    "metadata": {},
    "source": [
     "Calculamos la columna $\\mathbf {t_1}$"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b4d88d1",
+   "id": "2c171e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c155393d",
+   "id": "018c7afb",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66dcb53",
+   "id": "c37cbe3b",
    "metadata": {},
    "source": [
     "Apilamos horizontalmente $\\mathbf{t_1}$ y $\\mathbf{t_2}$."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "840923b7",
+   "id": "4bc5cdaa",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0b9baf26",
+   "id": "febfa44a",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd1f5d68",
+   "id": "41dfec58",
    "metadata": {},
    "source": [
     "Finalmente calculamos las matrices del sistema transformado:"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54e4ef97",
+   "id": "25f004d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519ec9dc",
+   "id": "e55d0655",
    "metadata": {},
    "source": [
     "Podemos verificar que las funciones transferencias del sistema antes de transformar y después de transformarlo son las mismas:"
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "92d40470",
+   "id": "9633b3bd",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4ebce014",
+   "id": "ae97ca61",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08a771d1",
+   "id": "3aa9f586",
    "metadata": {},
    "source": [
     "## Obtención de la forma canónica de controlabilidad\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3cf55f0a",
+   "id": "125bb6f1",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daad0ace",
+   "id": "0e1512df",
    "metadata": {},
    "source": [
     "Ahora calculamos la última fila de $\\mathbf{T}^{-1}$, $\\mathbf{t2}$"
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8e25ce49",
+   "id": "5ce4854d",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c49caa7",
+   "id": "273a028e",
    "metadata": {},
    "source": [
     "Calculamos la fila $\\mathbf {t_1}$"
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1a2f1137",
+   "id": "f076261e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7b0afa85",
+   "id": "475e144e",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f1fea31",
+   "id": "95ea182b",
    "metadata": {},
    "source": [
     "Apilamos verticalmente $\\mathbf{t_1}$ y $\\mathbf{t_2}$."
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2304574e",
+   "id": "bc728259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f41f1a",
+   "id": "26af7d59",
    "metadata": {},
    "source": [
     "Finalmente calculamos las matrices del sistema transformado:"
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dcd08194",
+   "id": "0c8aa238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c06171",
+   "id": "b9f03446",
    "metadata": {},
    "source": [
     "Podemos verificar que las funciones transferencias del sistema antes de transformar y después de transformarlo son las mismas:"
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "308b6ac2",
+   "id": "04db39b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a6467fb5",
+   "id": "eba25d88",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc2c65a",
+   "id": "de8f1fcb",
    "metadata": {},
    "source": [
     "## Transformación a la forma canónica modal:\n",
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc219e05",
+   "id": "6ef8240e",
    "metadata": {},
    "source": [
     "Suponiendo que $\\mathbf A$ tienen $n$ autovalores diferentes, entonces podemos escribir en forma matricial $n$ ecuaciones para los $n$ pares autovalores-autovector"
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5302f87",
+   "id": "7ef9d795",
    "metadata": {},
    "source": [
     "$$\n",
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b039879",
+   "id": "e3bb098c",
    "metadata": {},
    "source": [
     "Si hacemos que:\n",
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9554a3",
+   "id": "144116a5",
    "metadata": {},
    "source": [
     "## Ejemplo de transformación a la forma canónica modal\n",
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dadc94b8",
+   "id": "860a1dab",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799c805a",
+   "id": "7bbf785f",
    "metadata": {},
    "source": [
     "La matriz de transformación T es la de los autovectores. Entonces:"
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "339b4f41",
+   "id": "766d8264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23bd6a5b",
+   "id": "61a49718",
    "metadata": {},
    "source": [
     "Calculamos la transformación:"
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bbeb8196",
+   "id": "22a5f93e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cf9f11cd",
+   "id": "6d28a1ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0b937361",
+   "id": "36f3ea08",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caea9fb1",
+   "id": "11fca70e",
    "metadata": {},
    "source": [
     "Observando la matriz $\\mathbf{A}$ del sistema en su forma canónica modal tiene en su diagonal lo autovalores, y fuera de esto valores igual a 0 o muy cercanos a ceros. Las diferencias con ceros son error numéricos y podemos considerar que la transformación resultó correcta."
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de960846",
+   "id": "0072518a",
    "metadata": {},
    "source": [
     "Por otro lado podemos ver que todos las componentes de B en esta forma canónica son distintos de 0, por lo que el sistema es controlable."
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f7a0c4",
+   "id": "1748edd1",
    "metadata": {},
    "source": [
     "Finalmente, para el sistema en la forma canónica modal, todas las componentes de C son distintas de 0,por lo que el sistema es observable."
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4488153",
+   "id": "594f70cc",
    "metadata": {},
    "source": [
     "```{warning}\n",
@@ -1179,11 +1179,11 @@
     "extension": ".md",
     "format_name": "myst",
     "format_version": 0.13,
-    "jupytext_version": "1.10.2"
+    "jupytext_version": "1.10.3"
    }
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1201,72 +1201,72 @@
   },
   "source_map": [
    15,
-   57,
-   79,
-   114,
-   123,
-   179,
-   213,
-   219,
-   232,
-   249,
-   264,
-   273,
-   285,
-   299,
-   311,
-   343,
-   347,
-   354,
-   358,
-   365,
-   369,
+   56,
+   78,
+   113,
+   122,
+   178,
+   212,
+   218,
+   231,
+   248,
+   263,
+   272,
+   284,
+   298,
+   310,
+   342,
+   346,
+   351,
+   355,
+   359,
+   363,
+   372,
    381,
-   390,
-   394,
-   400,
-   404,
-   410,
+   385,
+   388,
+   392,
+   395,
+   399,
+   403,
+   405,
+   409,
    414,
-   418,
-   422,
+   417,
+   421,
    426,
-   431,
-   436,
-   440,
-   448,
-   452,
+   430,
+   435,
+   437,
+   450,
+   453,
    457,
-   461,
+   460,
+   464,
+   468,
+   470,
    474,
-   479,
-   483,
-   488,
-   492,
+   477,
+   481,
+   486,
+   490,
+   494,
    496,
-   500,
-   503,
-   508,
-   512,
-   519,
-   523,
+   510,
+   514,
    527,
-   531,
-   545,
-   549,
    562,
-   597,
-   605,
-   611,
-   615,
-   620,
-   624,
-   631,
-   635,
-   639,
-   643,
-   647,
-   651
+   570,
+   574,
+   578,
+   581,
+   585,
+   592,
+   596,
+   598,
+   602,
+   606,
+   610
   ]
  },
  "nbformat": 4,
