deploy: 0c72544a3f12b9fdb723fdfb4316e9d4441be0d4

--- a/_sources/sources/notebooks_sources/intro_python/Extra_Python.ipynb
+++ b/_sources/sources/notebooks_sources/intro_python/Extra_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "422aa20c",
+   "id": "1b98a3d9",
    "metadata": {},
    "source": [
     "# Introducción a Python\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9742bac8",
+   "id": "5e7bb8c2",
    "metadata": {},
    "source": [
     "## Números\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ec79fbc0",
+   "id": "8120bba4",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07174ad2",
+   "id": "afc3eaa5",
    "metadata": {},
    "source": [
     "### Punto flotante\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02951a20",
+   "id": "1a5c9f65",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb57fb9",
+   "id": "c2855de6",
    "metadata": {},
    "source": [
     "En caso de necesitar que un número entero sea representado como un flotante,\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3c2798a8",
+   "id": "3fa0b538",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ede0c53",
+   "id": "891a685f",
    "metadata": {},
    "source": [
     "Otra forma de hacerlo, mucho menos común es:"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15cd33de",
+   "id": "88565e84",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ad1dc2",
+   "id": "765a9280",
    "metadata": {},
    "source": [
     "### Números complejos\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ae412ecd",
+   "id": "3ca28ef1",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5c49b4",
+   "id": "4d0bb501",
    "metadata": {},
    "source": [
     "Python soporta ciertas operaciones de forma nativa con los números complejos:"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "93eb95fe",
+   "id": "bb3d2dcf",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "66014b30",
+   "id": "920621f3",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69aab782",
+   "id": "e73cc1eb",
    "metadata": {},
    "source": [
     "Fácilmente podemos obtener la parte real e imaginaria"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ef46ba5",
+   "id": "8d6d9ca5",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578fe5c5",
+   "id": "d02dcd3a",
    "metadata": {},
    "source": [
     "Notar la diferencia entre el **método** `conjugate` y la **propiedad**\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b741f382",
+   "id": "9fb591e5",
    "metadata": {},
    "source": [
     "## Listas\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0a08091f",
+   "id": "66b92c8f",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b7c887",
+   "id": "5625a3c6",
    "metadata": {},
    "source": [
     "Es común ver en Python incluya una sintaxis algo diferente del `for`\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5649bff2",
+   "id": "4c390cbe",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fe8650",
+   "id": "742dc114",
    "metadata": {},
    "source": [
     "## Diccionarios\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "804ff5b4",
+   "id": "8534814a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bc8ff1",
+   "id": "b6c66e33",
    "metadata": {},
    "source": [
     "Podemos recuperar elementos de la lista mediante _indexado_"
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e40738c",
+   "id": "fdaac8d5",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e42926",
+   "id": "ec76d57d",
    "metadata": {},
    "source": [
     "Un diccionario nos da un contenedor como una lista, pero los índices pueden\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "24040ca3",
+   "id": "e1bdefb1",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9146d226",
+   "id": "1315cd0f",
    "metadata": {
     "tags": [
      "raises-exception"
@@ -431,7 +431,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_6326/1077129509.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_7106/1077129509.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: 0"
      ]
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae611dd",
+   "id": "530bad28",
    "metadata": {},
    "source": [
     "## Tuplas\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6314da56",
+   "id": "9d78ea9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6d3b97c2",
+   "id": "27f4f2ef",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "75abe315",
+   "id": "7da94aa5",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c1241a",
+   "id": "ca2b6b5a",
    "metadata": {},
    "source": [
     "Las tuplas son como listas, pero se crean con comas:"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "872e3061",
+   "id": "2c5f9235",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46702314",
+   "id": "5426bdd0",
    "metadata": {},
    "source": [
     "En algunos casos, es útil usar paréntesis para agrupar tuplas, pero tenga en\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "13fee356",
+   "id": "20316941",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e053a13",
+   "id": "4138104c",
    "metadata": {},
    "source": [
     "Es importante entender que la coma, no los paréntesis forman tuplas:"
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4609a7d8",
+   "id": "b8d07634",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e3d60187",
+   "id": "272245c7",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "35bbfc09",
+   "id": "86df4d81",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ba74bd",
+   "id": "e9931132",
    "metadata": {},
    "source": [
     "La única excepción a esta regla es que una tupla vacía se construye con `()`:"
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "757a766f",
+   "id": "5e73434f",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c94de0a9",
+   "id": "98c14ec4",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4db155",
+   "id": "72745507",
    "metadata": {},
    "source": [
     "Las diferencias entre las tuplas y las listas son que las tuplas son\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3541d878",
+   "id": "fcfaab25",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7197460",
+   "id": "462f18f7",
    "metadata": {},
    "source": [
     "Pero si ejecutamos"
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0fe01fb7",
+   "id": "b8414f16",
    "metadata": {
     "tags": [
      "raises-exception"
@@ -749,7 +749,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_6326/3691855584.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_7106/3691855584.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5c60ba8",
+   "id": "e04cfaed",
    "metadata": {},
    "source": [
     "### Expansión de la tupla\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "623b59b6",
+   "id": "270b9f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90eccab5",
+   "id": "76be301a",
    "metadata": {},
    "source": [
     "Esto es bastante sofisticado y puede manejar estructuras anidadas y\n",
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a68a01e5",
+   "id": "fb881cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "431c27fb",
+   "id": "fb7b1036",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5675cb64",
+   "id": "c0bb6069",
    "metadata": {},
    "source": [
     "## El bucle for en Python\n",
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "02326b13",
+   "id": "95642b24",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,14 @@
       "1\n",
       "2\n",
       "3.0\n",
-      "hola\n"
+      "hola"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -863,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d8a21e",
+   "id": "3e2a1900",
    "metadata": {},
    "source": [
     "Para un diccionario,  va a devolver en cada iteración la `key` es decir:"
@@ -872,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "671f3331",
+   "id": "80710102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2122462a",
+   "id": "b9e0e113",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae1fb67",
+   "id": "152be534",
    "metadata": {},
    "source": [
     "Finalmente para un `array` de `numpy` me va a devolver cada elemento del\n",
@@ -917,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "86d89055",
+   "id": "f61784a0",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89de2f12",
+   "id": "0d2db506",
    "metadata": {},
    "source": [
     "## Funciones\n",
@@ -956,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e7e6a59c",
+   "id": "c0e24143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25603cdc",
+   "id": "25db0465",
    "metadata": {},
    "source": [
     "El argumento x es un argumento posicional y es obligatorio a la hora\n",
@@ -979,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0d8545e7",
+   "id": "c684266d",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc3a93e",
+   "id": "5a22bd2b",
    "metadata": {},
    "source": [
     "Podemos ver que asumió que `m=0` y `h=1`. También podríamos llamarla a la\n",
@@ -1008,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3edd00f9",
+   "id": "f9691987",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa761c61",
+   "id": "84a277e8",
    "metadata": {},
    "source": [
     "O lo que es lo mismo:"
@@ -1035,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c8dabc7f",
+   "id": "933fe77a",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e3b5f5",
+   "id": "103c3d47",
    "metadata": {},
    "source": [
     "O equivalentemente:"
@@ -1062,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a2228a5a",
+   "id": "6b61bbe9",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaffcf24",
+   "id": "850293e5",
    "metadata": {},
    "source": [
     "Pero si intentamos sin darle valores a `x` tendremos:"
@@ -1089,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7b805bf3",
+   "id": "c32f3898",
    "metadata": {
     "tags": [
      "raises-exception"
@@ -1103,7 +1110,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_6326/2015032707.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcambio_de_escala\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_7106/2015032707.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcambio_de_escala\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: cambio_de_escala() missing 1 required positional argument: 'x'"
      ]
     }
