deploy: ce12b34b1634c3f0a108ee46d2cdba034ba6464f

--- a/_sources/sources/notebooks_sources/modulo_ve/estimadores.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/estimadores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069295c4",
+   "id": "33d94125",
    "metadata": {
     "id": "-yaDGL7biDMS"
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "764f5d89",
+   "id": "974b9c11",
    "metadata": {
     "id": "YSG8ObATiDMV"
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc25c37c",
+   "id": "e14f7577",
    "metadata": {
     "id": "cT4SikTwiDMX"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4502950f",
+   "id": "d5bdafff",
    "metadata": {
     "id": "_6qBicU_iDMZ"
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f6641da",
+   "id": "0059ebc7",
    "metadata": {
     "id": "OBIu1_mfiDMa"
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "553b3acb",
+   "id": "e091ce7a",
    "metadata": {
     "id": "U9dR4qO3iDMb"
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7022d8",
+   "id": "b59de966",
    "metadata": {
     "id": "0hmPx2AOiDMd"
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af895a2",
+   "id": "ecb37aa4",
    "metadata": {
     "id": "ivR9oWmziDMe"
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86749848",
+   "id": "6dfe2d8a",
    "metadata": {
     "id": "VWKPR_BUiDMg"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ee54be",
+   "id": "36388eef",
    "metadata": {
     "id": "T0b-HP_0iDMh"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28100a49",
+   "id": "4617f9a5",
    "metadata": {
     "id": "3KmAGcHqiDMi"
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b3fba0",
+   "id": "dc8694dc",
    "metadata": {
     "id": "UdzkPKv4iDMj"
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fe988c",
+   "id": "7adcd8fe",
    "metadata": {
     "id": "1ZBKu9asiDMk"
    },
@@ -199,18 +199,18 @@
     "\n",
     "Haciendo esto tenemos que:\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "\\mathbf{x} &\\leftarrow&\\mathbf x_b\\\\\n",
-    "\\mathbf{A} &\\leftarrow&\\mathbf A_{bb}\\\\\n",
-    "\\mathbf{B}u &\\leftarrow&\\mathbf A_{ba}y+\\mathbf B_{b}u\\\\\n",
-    "y &\\leftarrow&\\dot y - A_{aa}y-\\mathbf B_{a}u\\\\\n",
-    "\\mathbf{C} &\\leftarrow&\\mathbf A_{ab}\\\\\n",
-    "\\end{eqnarray}$$"
+    "$$\\begin{align*}\n",
+    "\\mathbf{x} &\\leftarrow \\mathbf x_b\\\\\n",
+    "\\mathbf{A} &\\leftarrow \\mathbf A_{bb}\\\\\n",
+    "\\mathbf{B}u &\\leftarrow \\mathbf A_{ba}y+\\mathbf B_{b}u\\\\\n",
+    "y &\\leftarrow \\dot y - A_{aa}y-\\mathbf B_{a}u\\\\\n",
+    "\\mathbf{C} &\\leftarrow \\mathbf A_{ab}\\\\\n",
+    "\\end{align*}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eac87203",
+   "id": "8f938041",
    "metadata": {
     "id": "noiHPiuOiDMl"
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408c4fe3",
+   "id": "62ef7e3b",
    "metadata": {
     "id": "QgY1FGggiDMm"
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e019995a",
+   "id": "90baa9b4",
    "metadata": {
     "id": "ym7WJGLrGbJ6"
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd76c9a0",
+   "id": "0307826b",
    "metadata": {
     "id": "a_pE65tNGie4"
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0bba59a",
+   "id": "d7cacc06",
    "metadata": {
     "id": "zS5DhpWrGbJ7"
    },
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe4d02f",
+   "id": "623fe968",
    "metadata": {
     "id": "MNUU1YgliDMn"
    },
    "source": [
     "El problema que tiene el estimador es que depende de la derivada de $y$: uno mide $y$ y a partir de esta variable resuelve $\\dot y$, lo cual implica amplificar cualquier ruido presente en la medición:\n",
     "\n",
-    "$$\\mathbf {\\dot {\\hat x}}_b = (\\mathbf {A}_{bb}-\\mathbf L\\mathbf A_{ab})\\mathbf{\\hat{x}}_b + (\\mathbf{A}_{ba}-\\mathbf L A_{aa})y + (\\mathbf B_b- \\mathbf L B_a) +\\mathbf L \\dot y $$\n",
+    "$$\\mathbf {\\dot {\\hat x}}_b = (\\mathbf {A}_{bb}-\\mathbf L\\mathbf A_{ab})\\mathbf{\\hat{x}}_b + (\\mathbf{A}_{ba}-\\mathbf L A_{aa})y + (\\mathbf B_b- \\mathbf L B_a)u +\\mathbf L \\dot y $$\n",
     "\n",
     "Para poder obtener una ecuación del estimador sin la derivada de la medición, lo que se puede hacer es redefinir la variable de estado como:\n",
     "\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e9cd42",
+   "id": "53f05a0d",
    "metadata": {
     "id": "qCYQwLAZiDMn"
    },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e7dcec",
+   "id": "beb42b60",
    "metadata": {
     "id": "c8LUE5d7iDMo"
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628b8e53",
+   "id": "176f4b84",
    "metadata": {
     "id": "M_pBHg0riDMq"
    },
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "242e8e00",
+   "id": "a46af25c",
    "metadata": {
     "id": "EMtRWJIdiDMr",
     "tags": [
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9586417",
+   "id": "308a5663",
    "metadata": {
     "id": "EMtRWJIdiDMr"
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ab1c9d",
+   "id": "a0d918bf",
    "metadata": {
     "id": "iIbgk2pqGbKG"
    },
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8fd39d2a",
+   "id": "3db0ec5d",
    "metadata": {
     "id": "RVnOImHHiDMx"
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b273f6",
+   "id": "b4f351a1",
    "metadata": {
     "id": "By0jLubjGbKR"
    },
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "97737d66",
+   "id": "f9e140d7",
    "metadata": {
     "id": "U0FxBQyWiDM8"
    },
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5a30a69",
+   "id": "ba699e46",
    "metadata": {
     "id": "MnME15obGbKY",
     "outputId": "fbd400f6-cb08-4239-bb43-94bf82c39dc8"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83600432",
+   "id": "04181090",
    "metadata": {},
    "source": [
     "## Estimador completo y ley de control\n",
@@ -484,12 +484,12 @@
     "\n",
     "$$u(t)=\\underbrace{-\\mathbf{K}}_{\\mathbf C_C}\\mathbf{x}(t) + \\underbrace {\\mathbf 0}_{\\mathbf D} u(t)$$\n",
     "\n",
-    "Estas ecuaciones descrieben a un sistema controlador donde se estiman los estados con un estamidor de orden completo y los polos de la planta se deciden con la ley de control. Más adelante se mostrará como se agregan las referencias a este sistema."
+    "Estas ecuaciones describen a un sistema controlador donde se estiman los estados con un estimador de orden completo y los polos de la planta se deciden con la ley de control. Más adelante se mostrará como se agregan las referencias a este sistema."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53fb9543",
+   "id": "0b86ba36",
    "metadata": {},
    "source": [
     "## Estimador de orden reducido y ley de control\n",
@@ -506,17 +506,17 @@
     "\n",
     "$$u(t) = -K_a y(t) - \\mathbf K _b \\hat {\\mathbf x}_B(t)= -K_a y(t) - \\mathbf K _b \\mathbf x_C(t) - \\mathbf K _b \\mathbf L y(t) =\\underbrace{-\\mathbf K _b}_{\\mathbf C_r}\\mathbf x_C(t) +\\underbrace{(-K_a - \\mathbf K _b \\mathbf L)}_{\\mathbf D_r} y(t)   $$\n",
     "\n",
-    "Replanzandola en la ecuación del estimador anterior y reagrupando tenemos que:\n",
+    "Reemplanzando en la ecuación del estimador anterior y reagrupando tenemos que:\n",
     "\n",
     "$$\\dot{\\mathbf x}_C = \\underbrace{((\\mathbf {A}_{bb}-\\mathbf L\\mathbf A_{ab})-(\\mathbf B_b- \\mathbf L B_a)\\mathbf K_B )}_{\\mathbf A_r}\\mathbf x_C +\\underbrace{[ (\\mathbf {A}_{bb}-\\mathbf L\\mathbf A_{ab})\\mathbf L +  (\\mathbf {A}_{ba}-\\mathbf L\\mathbf A_{aa}) - (\\mathbf B_b- \\mathbf L B_a) (K_a + \\mathbf K _b \\mathbf L) ]}_{\\mathbf B_r} y(t)$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "841a571f",
+   "id": "ba155372",
    "metadata": {},
    "source": [
-    "Examinando las ecuaciones anteriores, podemos definir las ecuaciones que describien este compensador en espacio de estados como:\n",
+    "Examinando las ecuaciones anteriores, podemos definir las ecuaciones que describen este compensador en espacio de estados como:\n",
     "\n",
     "$$ \\mathbf A_r = (\\mathbf {A}_{bb}-\\mathbf L\\mathbf A_{ab})-(\\mathbf B_b- \\mathbf L B_a)\\mathbf K_B $$\n",
     "\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c0a4e8",
+   "id": "3f315953",
    "metadata": {},
    "outputs": [],
    "source": []
