deploy: 710f42cd024a65bed8eee8f0a1f48a3fc101b935

--- a/_sources/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c606563f",
+   "id": "b27e2bdf",
    "metadata": {},
    "source": [
     "# Estabilidad en Frecuencia\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4d1046",
+   "id": "26ab519c",
    "metadata": {},
    "source": [
     "## Criterio de estabilidad de Nyquist\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf73e6e",
+   "id": "7c35327e",
    "metadata": {},
    "source": [
     "## Criterio de estabilidad\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540fd962",
+   "id": "a38ea20e",
    "metadata": {},
    "source": [
     "## Diagrama de Nyquist asintótico\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0af39f0",
+   "id": "611566d2",
    "metadata": {},
    "source": [
     "### Ejemplo: Diagrama de Nyquist para determinar la estabilidad\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dedca83",
+   "id": "862ba3aa",
    "metadata": {},
    "source": [
     "### Otro ejemplo: Con cierre por $\\infty$\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "001424ea",
+   "id": "5fda1092",
    "metadata": {},
    "source": [
     "## Margen de Fase (MF) y Margen de Ganancia (MG)\n",
@@ -497,11 +497,11 @@
     "Usando diagramas de Nyquist se definen dos mediciones cuantitativas de \"cuan estable es el sistema que estamos analizando\". Estas son el margen de ganancia y el margen de fase.\n",
     "Sistemas con margenes de estabilidad de ganancia y fase grandes pueden soportar grandes variaciones en los parámetros antes de hacerse inestables. En el lugar de las raíces esto sería equivalente a cuan lejos se encuentran los polos del eje $j\\omega$.\n",
     "\n",
-    "### Definición de Margen de Fase $\\Phi_M$\n",
+    "### Definición de Margen de Ganancia $G_M$\n",
     "\n",
     "Es el cambio en la ganancia a lazo abierto, expresado en decibels ($dB$), requerida a fase $180º$ para hacer que el sistema sea inestable a lazo cerrado.\n",
     "\n",
-    "### Definición de Margen de Fase $G_M$\n",
+    "### Definición de Margen de Fase  $\\Phi_M$\n",
     "\n",
     "Es el cambio de fase a lazo abierto cuando la ganancia del sistema es 1 en valor absoluto (o $0~dB$) que hace que el sistema a lazo cerrado sea inestable.\n",
     "\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a32e006d",
+   "id": "ac5bccf2",
    "metadata": {},
    "source": [
     "## Margenes de estabilidad en diagramas de Bode\n",
